[package]
name = "datagn"
version = "0.1.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.1", features = ["all" ] }
async-std = "1.9.0"
logger = {git = "https://github.com/Rheydskey/logger.git", branch = "master"}
serde = {version = "1.0.123", features = ["derive"]}