[package]
name = "datagn"
version = "0.1.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at http s://doc.rust-lang.org/cargo/reference/manifest.html

[features]
runtime-actix-native-tls = ["sqlx/runtime-actix-native-tls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-actix-rustls = ["sqlx/runtime-actix-rustls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
# Fix Bitvecs bug
funty="=1.1.0"
sqlx = { version = "0.5.1", features = ["all"] }
async-std = "1.9.0"
logger = {git = "https://github.com/Rheydskey/logger.git", branch = "master"}
serde = {version = "1.0.123", features = ["derive"]}